<resources>
    <string name="app_name">WILD CATS</string>
    <string name="facebook_app_id">756506647831411</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_a_tip">Add Tip</string>
    <string name="developer_info">Created By Madhu</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="facebook_provider_id">facebook_provider_id</string>
    <string name="all_posts">FEED</string>
    <string name="my_posts">MY POSTS</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="action_save">Create Account</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">REGISTER</string>
    <string name="select_or_take_picture">Select or Take a picture</string>
    <string name="add_posts">TELL US YOUR STORY</string>
    <string name="no_posts_added_yet">You haven\'t shared your story yet !</string>
    <string name="comments">COMMENTS:</string>
    <string name="share">share</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="post">New Post</string>
    <string name="referToAFriend">Share</string>
    <string name="userName">First Last Name</string>
    <string name="author_email">author@gmail.com</string>
    <string name="Rides">RIDES</string>
    <string name="new_car">New Ride Request</string>
    <string name="settings">Settings</string>
    <string name="my_rides">MY RIDES</string>
</resources>
